# DeepSeek

./: LICENSE  README.md  package-lock.json  package.json
scripts/: icon_gen.bat
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/python/: openai.py
src-tauri/src/: core.js  lib.rs  main.rs  tiktoken_py.rs  utils.rs
src-tauri/src/app/: setup.rs
